[tool.poetry]
name = "nonebot_plugin_muteme"
version = "0.0.1"
description = "唔唔？你想被禁言嘛~？"
authors = ["Miaowing <shengwang52005@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shengwang52005/nonebot_plugin_muteme"
repository = "https://github.com/shengwang52005/nonebot_plugin_muteme"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = ">=2.3.2"
nonebot-adapter-onebot = ">=2.3.1"
httpx = ">=0.27.0"
pil_utils = "0.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
